<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
  xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".WalletActivity">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wallet_info"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coins"/>

        <TextView
            android:id="@+id/txt_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/zero" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_die"
        android:minWidth="128sp"
        android:minHeight="128sp"
        android:background="@color/design_default_color_primary"
        android:text="@string/zero"
        android:textColor="@color/cardview_light_background"
        android:textSize="85sp"  android:layout_height="wrap_content" android:layout_width="wrap_content"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/previous_roll" />

        <TextView
            android:id="@+id/prev_roll_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous_roll_value"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/sixes_rolled"/>
            <TextView
                android:id="@+id/sixes_rolled_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixes_rolled_val"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:text="@string/total_dice_rolls"/>
            <TextView
                android:id="@+id/total_dice_rolls_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixes_rolled_val"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="90dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/double_sixes"/>
            <TextView
                android:id="@+id/double_sixes_rolled_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_sixes_val"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:text="@string/double_others"/>
            <TextView
                android:id="@+id/double_others_rolled_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/double_others_val"/>
        </LinearLayout>

    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/btn_settings"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/Settings"/>-->
    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings_icon"
        android:contentDescription="@string/Settings"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

</LinearLayout>


